--- a/LoginRegister/index.html
+++ b/LoginRegister/index.html
@@ -24,8 +24,7 @@
                     <h1>Login</h1>
                     <input type="email" placeholder="Email" id="login-email" />
                     <input type="password" placeholder="Password" id="login-password"/>
-                    <p>Forgot your password?</p>
-                    <!-- <button onclick="login()">Login</button> -->
+                    <p>Forgot Your Password?</p>
                     <button>Login</button>
                 </form>
             </div>
