--- a/LoginRegister/index.html
+++ b/LoginRegister/index.html
@@ -24,7 +24,7 @@
                     <h1>Login</h1>
                     <input type="email" placeholder="Email" id="login-email" />
                     <input type="password" placeholder="Password" id="login-password"/>
-                    <p>Forgot Your Password?</p>
+                    <a href="" class="links">Forgot Your Password?</a>
                     <button>Login</button>
                 </form>
             </div>
